--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-io-example",
+  "name": "angular5-googlemap-autocomplete",
   "version": "1.0.0",
   "private": true,
-  "description": "Example project from an angular.io guide.",
+  "description": "Directive for google map autocomplete.",
   "scripts": {
     "ng": "ng",
     "build": "ng build --prod",
@@ -16,12 +16,14 @@
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "~5.0.0",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "~5.0.0",
     "@angular/compiler": "~5.0.0",
     "@angular/compiler-cli": "~5.0.0",
     "@angular/core": "~5.0.0",
     "@angular/forms": "~5.0.0",
     "@angular/http": "~5.0.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "~5.0.0",
     "@angular/platform-browser-dynamic": "~5.0.0",
     "@angular/platform-server": "~5.0.0",
