image added in read me

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular5-googlemap-autocomplete",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.1",
+  "private": false,
   "description": "Directive for google map autocomplete.",
   "scripts": {
     "ng": "ng",
